src/test/ui/resolve/issue-5035.stderr
error[E0432]: unresolved import `ImportError`
  --> $DIR/issue-5035.rs:5:5
   |
LL | use ImportError;
   |     ^^^^^^^^^^^ no `ImportError` in the root

error[E0404]: expected trait, found type alias `K`
  --> $DIR/issue-5035.rs:3:6
   |
LL | impl K for isize {}
   |      ^
   |      |
   |      type aliases cannot be used as traits
   |      help: a trait with a similar name exists: `I`
   |
   = note: did you mean to use a trait alias?

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0404, E0432.
For more information about an error, try `rustc --explain E0404`.
